--- a/hw01/pom.xml
+++ b/hw01/pom.xml
@@ -118,6 +118,7 @@
                                     <manifestEntries>
                                         <Main-Class>ru.otus.hw.Application</Main-Class>
                                         <Build-Number>123</Build-Number>
+                                        <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
