--- a/.github/workflows/222.yml
+++ b/.github/workflows/222.yml
@@ -22,15 +22,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build application
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          mvn verify --no-transfer-progress
