--- a/hw01/pom.xml
+++ b/hw01/pom.xml
@@ -45,7 +45,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -113,7 +112,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <Main-Class>ru.otus.hw.Application</Main-Class>
                                     <manifestEntries>
                                         <Main-Class>ru.otus.hw.Application</Main-Class>
