--- a/hw01/ex02/pom.xml
+++ b/hw01/ex02/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.otus.hw</groupId>
-        <artifactId>chaban</artifactId>
+        <artifactId>hw01-xml-config</artifactId>
         <version>1.0</version>
     </parent>
 
