--- a/ex03/src/main/resources/application.yml
+++ b/ex03/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     encoding: UTF-8
     # Не дает свалиться в системную локаль если не найден файл для переданной в MessageSource
     # Если false то будут браться сообщения из дефолтного файла, если true, то из файла соответствующего системной локали
-    fallbackToSystemLocale: false
+    fallbackToSystemLocale: true
 test:
   rightAnswersCountToPass: 3
   locale: en-US
