--- a/hw01/ex05/src/main/resources/application.yml
+++ b/hw01/ex05/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
+
+  shell:
+    interactive:
+      enabled: true
+
   datasource:
-    url: jdbc:h2:mem:maindb
+    driver-class-name: org.postgresql.Driver
+    password: 1
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/mydb
+
   sql:
     init:
       mode: always
