--- a/hw01/ex05/src/test/resources/application.yml
+++ b/hw01/ex05/src/test/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    password: 1
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/mydb
+
   sql:
     init:
       mode: always
