--- a/ex05/src/main/resources/application.yml
+++ b/ex05/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
       enabled: true
 
   datasource:
-    driver-class-name: org.postgresql.Driver
-    password: 1
-    username: postgres
-    url: jdbc:postgresql://localhost:5432/mydb
+    driver-class-name: org.h2.Driver
+    password: ''
+    username: sa
+    url: jdbc:h2:file:./h2/hw
 
   sql:
     init:
