--- a/ex06/src/test/resources/application.yml
+++ b/ex06/src/test/resources/application.yml
@@ -1,12 +1,28 @@
-spring:
+ spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    password: ''
-    username: sa
-    url: jdbc:h2:file:./h2/hw
+    driver-class-name: org.postgresql.Driver
+    password: 1
+    username: postgres
+    url: jdbc:postgresql://localhost/mydb
+
+
+  shell:
+    interactive:
+      enabled: true
+
 
   sql:
     init:
       mode: always
       data-locations: data.sql
       schema-locations: schema.sql
+
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+
+    show-sql: true
+    properties:
+      hibernate:
+      #format_sql: true
