--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ex04</module>
         <module>ex05</module>
         <module>ex06</module>
+        <module>ex07</module>
     </modules>
 
 
