--- a/ex07/src/test/resources/application.yml
+++ b/ex07/src/test/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    password: 1
-    username: postgres
-    url: jdbc:postgresql://localhost/mydb
 
+  datasource:
+    driver-class-name: org.h2.Driver
+    password: ''
+    username: sa
+    url: jdbc:h2:mem:hw
 
   shell:
     interactive:
