--- a/ex06/src/test/resources/application.yml
+++ b/ex06/src/test/resources/application.yml
@@ -4,10 +4,16 @@ logging:
 
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    password: 1
-    username: postgres
-    url: jdbc:postgresql://localhost/mydb
+    driver-class-name: org.h2.Driver
+    password: ''
+    username: sa
+    url: jdbc:h2:mem:testdb
+
+#  datasource:
+#    driver-class-name: org.postgresql.Driver
+#    password: 1
+#    username: postgres
+#    url: jdbc:postgresql://localhost/mydb
 
 
   shell:
