--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ex03</module>
         <module>ex04</module>
         <module>ex05</module>
+        <module>ex08</module>
     </modules>
 
 
