--- a/ex09/src/main/resources/application.yaml
+++ b/ex09/src/main/resources/application.yaml
@@ -13,5 +13,6 @@ spring:
       ddl-auto: none
   sql:
     init:
+      mode: always
       schema-locations: classpath*:db/schema.sql
       data-locations: classpath*:db/data.sql
