--- a/ex09/pom.xml
+++ b/ex09/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.otus</groupId>
-    <artifactId>spring-mvc-view-demo</artifactId>
+    <artifactId>ex09</artifactId>
     <version>1.0</version>
 
     <parent>
