--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>ex05</module>
         <module>ex06</module>
         <module>ex07</module>
+        <module>ex10</module>
     </modules>
 
 
