--- a/ex10web/coners/package.json
+++ b/ex10web/coners/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"http://localhost:8080",
   "name": "coners",
   "private": true,
   "version": "0.0.0",
@@ -10,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "cor": "^0.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
