--- a/ex11/src/main/resources/application.yaml
+++ b/ex11/src/main/resources/application.yaml
@@ -1,15 +1,24 @@
 logging:
   level:
     ru.otus.hw.ex09.*: DEBUG
-    org.hibernate.SQL: DEBUG
+    org.springframework.jdbc.core.JdbcTemplate: TRACE
 
 spring:
 
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    password: 1
+  r2dbc:
+    url: r2dbc:postgresql://localhost/mydb
     username: postgres
+    password: 1
+  flyway:
     url: jdbc:postgresql://localhost/mydb
+    user: postgres
+    password: 1
+
+  #  datasource:
+  #    driver-class-name: org.postgresql.Driver
+  #    password: 1
+  #    username: postgres
+  #    url: jdbc:postgresql://localhost/mydb
 
   #  datasource:
   #    driver-class-name: org.h2.Driver
