--- a/ex11/src/main/resources/application.yaml
+++ b/ex11/src/main/resources/application.yaml
@@ -1,10 +1,9 @@
 logging:
   level:
-    ru.otus.hw.ex09.*: DEBUG
+    ru.otus.hw.ex11.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
 
 spring:
-
   r2dbc:
     url: r2dbc:postgresql://localhost/mydb
     username: postgres
@@ -27,15 +26,15 @@ spring:
   #    url: jdbc:h2:mem:hw
 
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    hibernate:
-      ddl-auto: none
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath*:db/schema.sql
-      data-locations: classpath*:db/data.sql
+#  jpa:
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    hibernate:
+#      ddl-auto: none
+#  sql:
+#    init:
+#      mode: always
+#      schema-locations: classpath*:db/schema.sql
+#      data-locations: classpath*:db/data.sql
