--- a/ex12/pom.xml
+++ b/ex12/pom.xml
@@ -11,10 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version> <!--
-        не работает на свежей версии. Так работает.
-        Заниматься переустановкй postgree, он на него жалуется не стал
-        Если все заработает, в лекции был механизм, как поднялся Postgree, до него пока не дошел(пока не понял) -->
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
 
@@ -56,6 +53,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!--dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
