--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>ex09</module>
         <module>ex10</module>
         <module>ex11</module>
+        <module>ex12sd</module>
     </modules>
 
 
