--- a/ex12hw/src/main/resources/application.yaml
+++ b/ex12hw/src/main/resources/application.yaml
@@ -30,3 +30,7 @@ spring:
       mode: always
       schema-locations: classpath*:db/schema.sql
       data-locations: classpath*:db/data.sql
+
+jwt:
+  private.key: classpath:app.key
+  public.key: classpath:app.pub
