--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ex10</module>
         <module>ex11</module>
         <module>ex12hw</module>
+        <module>ex12_r_hw</module>
     </modules>
 
 
