--- a/ex12_r_hw/src/main/resources/application.yaml
+++ b/ex12_r_hw/src/main/resources/application.yaml
@@ -13,6 +13,10 @@ spring:
     user: postgres
     password: 1
 
+jwt:
+      private.key: classpath:app.key
+      public.key: classpath:app.pub
+
   #  datasource:
   #    driver-class-name: org.postgresql.Driver
   #    password: 1
