--- a/ex12_r_hw/src/main/resources/application.yaml
+++ b/ex12_r_hw/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 logging:
   level:
-    ru.otus.hw.ex11.*: DEBUG
+    ru.otus.hw.ex12_r_hw.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
 
 spring:
