--- a/ex13/src/main/resources/application.yaml
+++ b/ex13/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ logging:
   level:
     ru.otus.hw.ex13.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
+    org.springframework.security: DEBUG
 
 spring:
   r2dbc:
