--- a/ex00/src/main/resources/application.yaml
+++ b/ex00/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 logging:
   level:
-    ru.otus.hw.ex00.*: DEBUG
-    org.hibernate.SQL: DEBUG
+    ru.otus.hw.ex00.*: OFF
+    org.hibernate.SQL: OFF
 
 spring:
 
