--- a/ex00/pom.xml
+++ b/ex00/pom.xml
@@ -35,6 +35,11 @@
             <version>1.6.3</version>
         </dependency>
 
+        <!--dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok-mapstruct-binding</artifactId>
