--- a/ex00/pom.xml
+++ b/ex00/pom.xml
@@ -35,10 +35,16 @@
             <version>1.6.3</version>
         </dependency>
 
-        <!--dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-60</artifactId>
+            <version>3.9.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
