--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>ex11</module>
         <module>ex12_r_hw</module>
         <module>ex13</module>
+        <module>ex14</module>
     </modules>
 
 
