--- a/ex14/docker-compose.yaml
+++ b/ex14/docker-compose.yaml
@@ -1,29 +1,24 @@
-version: '3'
+version: '0'
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    privileged: true
     ports:
-      - 8081:8081
+      - 8080:8080
     environment:
-      - DB_DRIVER=org.postgresql.Driver
-      - DB_URL=jdbc:postgresql://db:5433/postgres
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres
-      - WAIT_FOR=db:5432
-    networks:
-      - nw
-  db:
+      - SPRING_FLYWAY_URL=jdbc:postgresql://postgres:5432/db
+      - SPRING_FLYWAY_USERNAME=postgres
+      - SPRING_FLYWAY_PASSWORD=postgres
+      - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/db
+      - SPRING_R2DBC_USERNAME=postgres
+      - SPRING_R2DBC_PASSWORD=postgres
+  postgres:
     image: "postgres"
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=db
-    networks:
-      - nw
-networks:
-  nw:
+
