--- a/ex16/pom.xml
+++ b/ex16/pom.xml
@@ -13,9 +13,11 @@
 	<artifactId>ex16</artifactId>
 	<version>1.0</version>
 	<name>ex16</name>
+
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -23,19 +25,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-integration</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-redis</artifactId>
 		</dependency>
 
 		<dependency>
@@ -98,6 +88,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>corners</finalName>
 	</build>
 
 </project>
