--- a/ex16/src/main/resources/application.yaml
+++ b/ex16/src/main/resources/application.yaml
@@ -1,23 +1,22 @@
 logging:
   level:
-    ru.otus.hw.ex14.*: DEBUG
+    ru.otus.hw.ex16.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
     org.springframework.security: DEBUG
 
 spring:
-  r2dbc:
-    url: r2dbc:postgresql://localhost:5433/db
-    username: postgres
+  datasource:
+#    driver-class-name: org.postgresql.Driver
     password: postgres
+    username: postgres
+    url: jdbc:postgresql://localhost:5433/db
+
   flyway:
     schema: public
     url: jdbc:postgresql://localhost:5433/db
     user: postgres
     password: postgres
 
-jwt:
-  private.key: classpath:app.key
-  public.key: classpath:app.pub
 
   #  datasource:
   #    driver-class-name: org.postgresql.Driver
