--- a/ex16/pom.xml
+++ b/ex16/pom.xml
@@ -2,20 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 
 	<groupId>ru.otus</groupId>
 	<artifactId>ex16</artifactId>
 	<version>1.0</version>
-	<name>ex16</name>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.1.0</version>
+		<relativePath/>
+	</parent>
 
 	<properties>
-		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<snakeyaml.version>2.0</snakeyaml.version>
+		<checkstyle-plugin.version>3.3.1</checkstyle-plugin.version>
+		<checkstyle.version>10.15.0</checkstyle.version>
+		<checkstyle.config.url>
+			https://raw.githubusercontent.com/OtusTeam/Spring/master/checkstyle.xml
+		</checkstyle.config.url>
 	</properties>
 
 	<dependencies>
@@ -31,13 +38,13 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.6.0</version>
+			<!--version>42.6.0</version-->
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -61,17 +68,73 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
-					<excludes>
-						<exclude>
+					<executable>true</executable>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${checkstyle-plugin.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>${checkstyle.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<configLocation>${checkstyle.config.url}</configLocation>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<!--
+                                                <path>
+                                                    <groupId>org.mapstruct</groupId>
+                                                    <artifactId>mapstruct-processor</artifactId>
+                                                    <version>1.6.3</version>
+                                                </path>
+                        -->
+						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+							<!-- если убрать версию, то вообще все перестает даже компилироваться.
+                            Версию взаял из примера, когда пытался заставить работать -->
+							<version>1.18.32</version>
+						</path>
+						<!--
+                                                <path>
+                                                    <groupId>org.projectlombok</groupId>
+                                                    <artifactId>lombok-mapstruct-binding</artifactId>
+                                                    <version>0.2.0</version>
+                                                </path>
+                        -->
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
 		<finalName>corners</finalName>
 	</build>
+
 
 </project>
