--- a/ex16/src/main/resources/application.yaml
+++ b/ex16/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-#    driver-class-name: org.postgresql.Driver
+    driver-class-name: org.postgresql.Driver
     password: postgres
     username: postgres
     url: jdbc:postgresql://localhost:5433/db
