--- a/ex15/src/main/resources/application.yaml
+++ b/ex15/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ spring:
     url: jdbc:postgresql://localhost:5433/db
     user: postgres
     password: postgres
+  main:
+    allow-bean-definition-overriding: true
 
 jwt:
   private.key: classpath:app.key
