--- a/ex15/src/main/resources/application.yaml
+++ b/ex15/src/main/resources/application.yaml
@@ -1,10 +1,24 @@
 logging:
   level:
-    ru.otus.hw.ex14.*: DEBUG
+    ru.otus.hw.ex15.*: DEBUG
     org.springframework.jdbc.core.JdbcTemplate: TRACE
     org.springframework.security: DEBUG
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+
 spring:
+  jmx:
+    enabled: true
   r2dbc:
     url: r2dbc:postgresql://localhost:5433/db
     username: postgres
