--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>ex12_r_hw</module>
         <module>ex13</module>
         <module>ex14</module>
+        <module>ex17</module>
     </modules>
 
 
