--- a/ex17/pom.xml
+++ b/ex17/pom.xml
@@ -26,6 +26,7 @@
         <module>ex17_game</module>
         <module>ex17_sequrity</module>
         <module>ex17_user</module>
+        <module>ex17_db</module>
     </modules>
 
 </project>
