--- a/ex17/ex17_db/docker-compose.yaml
+++ b/ex17/ex17_db/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - SPRING_R2DBC_URL=r2dbc:postgresql://postgres:5432/db
       - SPRING_R2DBC_USERNAME=postgres
       - SPRING_R2DBC_PASSWORD=postgres
+    networks:
+        - bdnet
 
   postgres:
     image: "postgres"
