--- a/ex17/pom.xml
+++ b/ex17/pom.xml
@@ -23,11 +23,12 @@
     </properties-->
 
     <modules>
+        <module>ex17_front_game</module>
         <module>ex17_game</module>
         <module>ex17_sequrity</module>
+        <module>ex17_front_user</module>
         <module>ex17_user</module>
         <module>ex17_db</module>
-        <module>ex17-config-server</module>
     </modules>
 
 </project>
