--- a/ex17/ex17_game/src/main/resources/application.yaml
+++ b/ex17/ex17_game/src/main/resources/application.yaml
@@ -1,3 +1,49 @@
+spring:
+  application:
+    name: game
+
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        initial-interval: 5000
+        max-attempts: 10
+        max-interval: 5000
+        multiplier: 1.2
+  config:
+    import: optional:configserver:http://localhost:8888
+  codec:
+    max-in-memory-size: 10MB
+
+  data:
+    rest:
+      base-path: /datarest
+  jmx:
+    enabled: true
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5433/db
+    username: postgres
+    password: postgres
+  flyway:
+    schema: public
+    url: jdbc:postgresql://localhost:5433/db
+    user: postgres
+    password: postgres
+
+jwt:
+  private.key: classpath:app.key
+  public.key: classpath:app.pub
+
+eureka:
+  client:
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:9999/eureka/
+  instance:
+    lease-renewal-interval-in-seconds: 30
+    metadataMap:
+      zone: zone1
+
 server:
   port: 8082
 
@@ -19,48 +65,3 @@ management:
     defaults:
       enabled: true
 
-spring:
-  data:
-    rest:
-      base-path: /datarest
-  jmx:
-    enabled: true
-  r2dbc:
-    url: r2dbc:postgresql://localhost:5433/db
-    username: postgres
-    password: postgres
-  flyway:
-    schema: public
-    url: jdbc:postgresql://localhost:5433/db
-    user: postgres
-    password: postgres
-
-jwt:
-  private.key: classpath:app.key
-  public.key: classpath:app.pub
-
-  #  datasource:
-  #    driver-class-name: org.postgresql.Driver
-  #    password: 1
-  #    username: postgres
-  #    url: jdbc:postgresql://localhost/mydb
-
-  #  datasource:
-  #    driver-class-name: org.h2.Driver
-  #    password: ''
-  #    username: sa
-  #    url: jdbc:h2:mem:hw
-
-
-#  jpa:
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#    hibernate:
-#      ddl-auto: none
-#  sql:
-#    init:
-#      mode: always
-#      schema-locations: classpath*:db/schema.sql
-#      data-locations: classpath*:db/data.sql
