--- a/ex17/ex17_user/src/main/resources/application.yaml
+++ b/ex17/ex17_user/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: game
+    name: user
 
   cloud:
     config:
@@ -23,11 +23,6 @@ spring:
   r2dbc:
     url: r2dbc:postgresql://localhost:5433/db
     username: postgres
-    password: postgres
-  flyway:
-    schema: public
-    url: jdbc:postgresql://localhost:5433/db
-    user: postgres
     password: postgres
 
 eureka:
