--- a/ex17/ex17_sequrity/src/main/resources/application.yaml
+++ b/ex17/ex17_sequrity/src/main/resources/application.yaml
@@ -1,5 +1,39 @@
-server:
-  port: 8085
+spring:
+  application:
+    name: sequrity
+
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        initial-interval: 5000
+        max-attempts: 10
+        max-interval: 5000
+        multiplier: 1.2
+  config:
+    import: optional:configserver:http://localhost:8888
+  codec:
+    max-in-memory-size: 10MB
+
+  data:
+    rest:
+      base-path: /datarest
+  jmx:
+    enabled: true
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5433/db
+    username: postgres
+    password: postgres
+
+eureka:
+  client:
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:9999/eureka/
+  instance:
+    lease-renewal-interval-in-seconds: 30
+    metadataMap:
+      zone: zone1
 
 logging:
   level:
@@ -18,17 +52,6 @@ management:
   health:
     defaults:
       enabled: true
-
-spring:
-  data:
-    rest:
-      base-path: /datarest
-  jmx:
-    enabled: true
-  r2dbc:
-    url: r2dbc:postgresql://localhost:5433/db
-    username: postgres
-    password: postgres
 
 jwt:
   private.key: classpath:app.key
