--- a/ex17/ex17_front_game/src/main/resources/application.yaml
+++ b/ex17/ex17_front_game/src/main/resources/application.yaml
@@ -23,6 +23,8 @@ eureka:
     lease-renewal-interval-in-seconds: 30
     metadataMap:
       zone: zone1
+    import: optional:configserver:http://localhost:8888
+
 
 server:
   port: 8094
