--- a/ex17-spring-cloud/api-gateway/src/main/resources/application.yml
+++ b/ex17-spring-cloud/api-gateway/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+logging:
+  level:
+    root: INFO
+    org.springframework: INFO
+    org.springframework.cloud.gateway: DEBUG  # вк
+
 spring:
   application:
     name: api-gateway
@@ -19,13 +25,16 @@ application:
   api-routes:
     - id: "service-user"
       from: "api/user"
-      to: "lb://USER"
+#      to: "lb://USER"
+      to: "http://localhost:8087"
     - id: "service-game"
       from: "api/game"
-      to: "lb://GAME"
+#      to: "lb://GAME"
+      to: "http://localhost:8089"
     - id: "service-token"
       from: "api/token"
-      to: "lb://SEQURITY"
+#      to: "lb://SEQURITY"
+      to: "http://localhost:8085"
 
 eureka:
   client:
@@ -37,6 +46,7 @@ eureka:
     lease-renewal-interval-in-seconds: 30
     metadataMap:
       zone: zone1
+    prefer-ip-address: true
 
 management:
   tracing:
