--- a/ex17-spring-cloud/eureka-server/src/main/resources/application.yml
+++ b/ex17-spring-cloud/eureka-server/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+logging:
+  level:
+    root: INFO
+    org.springframework: INFO
+    com.netflix.eureka: DEBUG
+
 spring:
   application:
     name: eureka-server
@@ -15,6 +21,7 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    prefer-ip-address: true
 
 management:
   tracing:
