--- a/ex17/ex17_user/src/main/resources/application.yaml
+++ b/ex17/ex17_user/src/main/resources/application.yaml
@@ -34,6 +34,8 @@ eureka:
     lease-renewal-interval-in-seconds: 30
     metadataMap:
       zone: zone1
+    import: optional:configserver:http://localhost:8888
+
 
 logging:
   level:
