--- a/ex17/ex17_front_game/src/main/resources/application.yaml
+++ b/ex17/ex17_front_game/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ eureka:
     metadataMap:
       zone: zone1
     import: optional:configserver:http://localhost:8888
-
+    prefer-ip-address: true
 
 server:
   port: 8094
