--- a/ex17/ex17_game/src/main/resources/application.yaml
+++ b/ex17/ex17_game/src/main/resources/application.yaml
@@ -39,6 +39,7 @@ eureka:
     metadataMap:
       zone: zone1
     import: optional:configserver:http://localhost:8888
+    prefer-ip-address: true
 
 logging:
   level:
