--- a/ex17/ex17_user/src/main/resources/application.yaml
+++ b/ex17/ex17_user/src/main/resources/application.yaml
@@ -35,7 +35,7 @@ eureka:
     metadataMap:
       zone: zone1
     import: optional:configserver:http://localhost:8888
-
+    prefer-ip-address: true
 
 logging:
   level:
