--- a/ex17-spring-cloud/api-gateway/src/main/resources/application.yml
+++ b/ex17-spring-cloud/api-gateway/src/main/resources/application.yml
@@ -29,7 +29,8 @@ application:
 #      to: "http://localhost:8087"
     - id: "service-game"
       from: "api/game"
-      to: "lb://GAME"
+      to: "lb://FRONT-GAME"
+#      to: "lb://GAME"
 #      to: "http://localhost:8089"
     - id: "service-token"
       from: "api/token"
